# ntu_sa-roomsense2-mono

./: README.md  main.py  pyproject.toml
api_server/: Dockerfile  main.py  pyproject.toml
api_server/roomsense2/: common_types.py  errors.py
client/: main.py  manager.py  pyproject.toml  readme.md
client/docs/: roomsense2_client_circuit_diagram.cddx
client/roomsense2-client/: main.py
client/roomsense2_client/: main.py  manager.py
client/roomsense2_client/sensors/: audio.py  co2_scd41.py  humidity_temp_htu2x.py  image.py  ir_mlx90640.py  light_bh1750.py  light_tsl2591.py  motion_hcsrc5031.py
client/roomsense2_client/services/: upload.py
client/sensors/: audio.py  co2_scd41.py  humidity_temp_htu2x.py  image.py  light_tsl2591.py
client/services/: upload.py
roomsense2/: common_types.py  errors.py  fmt.py  mongodb.py  s3.py
